# dovon

./: package.json  pnpm-lock.yaml  tailwind.config.js
src/: App.tsx  db.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  serial_listener.rs
src/components/: Time.tsx
src/components/orders/: AddForm.tsx  OrderCard.tsx  OrderSummary.tsx
src/components/sizes/: AddForm.tsx
src/stores/: orders.ts  paltes.ts  rolls.ts  size_types.ts  sizes.ts
